# distributed-botnet

./: .gitignore  LICENSE  README.md  compose.yaml
GUI_UI/: Dockerfile  main.cpp
UI/: Dockerfile  bun.lockb  package.json  vite.config.ts
UI/src/: App.tsx  Plot.tsx
UI/src/services/: Services.ts
bot/: .gitignore  CMakeLists.txt  Dockerfile  bot.py  libbot.dylib  main.cpp
bot/data/: config.cfg
bot/docs/: Doxyfile
bot/include/: managing_threads.hpp  task_for_thread.hpp
bot/includes/: managing_threads.hpp  parse_config.hpp  task_for_thread.hpp
bot/src/: parse_config.cpp  task_for_thread.cpp
cpp_server/: CMakeLists.txt  Dockerfile  demo.db  main.cpp
front-end-test/: bun.lockb  package.json
front-end-test/src/: App.tsx
front-end-test/src/services/: Services.ts
lure/back-end/: main.py
lure/front-end/: bun.lockb  package.json
master/: CMakeLists.txt  Dockerfile  main.cpp
master/data/: Dockerfile  data.md  demo.db
master/docs/: Doxyfile
master/includes/: db_methods.hpp  status_codes_db_methods.hpp
master/so_lib/: CMakeLists.txt
master/so_lib/include/: so_lib.hpp
master/so_lib/src/: so_lib.cpp
master/src/: db_methods.cpp  status_codes_db_methods.cpp
mvp/: bot.py  master.py
ui/: Dockerfile  bun.lockb  package.json
ui/src/: App.tsx  main.tsx
ui/src/Layouts/: MainLayout.module.css  MainLayout.tsx
ui/src/pages/: Main.tsx  Plot.tsx
ui/src/pages/main/: Main.module.css  Main.tsx
ui/src/services/: Services.ts
